--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Jonathan Arroyo Tena</h1>
-							<p>Data Analyst Student with experience in SQL, Python, Tableau, PowerBI, and Excel.<br /></p>
+							<p>Data Science student with experience in SQL, Python, Tableau, PowerBI, and Excel. <br /></p>
+							<p>Hello, </p>
 							<p>Helping businesses convert raw data into interactable dashboards.</p>
 							<!--<p>Checkout my LinkedIn at using this <a href="http://html5up.net">link!</a><br />
 							and <a href="http://html5up.net/license">here</a> for GitHub.</p>-->
@@ -56,26 +57,30 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Python Visualization</h2>
-									<p>Created visuals (scatter plots, mapbox, boxplot) using statistics to better understand the Airbnb rental market and analyze trends to maximize profits as a property owner. <br /><a href="https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data?resource=download"><h3>Visit the Raw Data</h3></a></p>
+									<p>Created visuals (scatter plots, mapbox, boxplot) using statistics to better understand the Airbnb rental market and analyze trends to maximize profits as a property owner.</p>
+									<p>Skills used: Python, Pandas, Matplotlib, Seaborn, Plotly</p>
+									<p><a href="https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data?resource=download"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/Python-Data-Project" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<!--<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+						<section>
+							<a href="#" class="image"><img src="images/corona.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>SQL Exploration/Tableau Visualization</h2>
-									<p>Used COVID-19 data to present visuals to show the rapid increase in cases and vaccinations.<br><a href="https://ourworldindata.org/covid-deaths"><h3>Visit the Raw Data</h3></a></p>
+									<p>Used COVID-19 data to present visuals to show the rapid increase in cases and vaccinations.</p>
+									<p>Skills used: SQL, Tabelau, Joins, CTEs</p>
+									<p><a href="https://ourworldindata.org/covid-deaths"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">View Project</a></li>
+										<li><a href="https://github.com/Jnthn7/SQL-Tableau-Project/blob/main/Covid_Data_SQLQuery_Project.sql" class="button">SQL Queries</a>&nbsp;&nbsp;&nbsp;<a href="https://public.tableau.com/app/profile/jonathan.arroyo.tena/viz/SQL-TableauCovid/Dashboard" class="button">Tableau Dashboard</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<section>
+						<!--<section>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
@@ -92,7 +97,9 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Excel Dashboard</h2>
-									<p>Using pre-made sample data to create a dashboard using Microsoft Excel. Data from a bike shop was used to generate visuals to target demographics within the community.<br><a href="https://github.com/AlexTheAnalyst/Excel-Tutorial/blob/main/Excel%20Project%20Dataset.xlsx"><h3>Visit the Raw Data</h3></a></p>
+									<p>Using pre-made sample data to create a dashboard using Microsoft Excel. Data from a bike shop was used to generate visuals to target demographics within the community.</p>
+									<p>Skills used: Excel, Cleaning Data, Filters, Pivot Tables</p>
+									<p><a href="https://github.com/AlexTheAnalyst/Excel-Tutorial/blob/main/Excel%20Project%20Dataset.xlsx"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="button">View Project</a></li>
 									</ul>
