--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="inner">
 							<h1>Jonathan Arroyo Tena</h1>
 							<p>Data Science student with experience in SQL, Python, Tableau, PowerBI, and Excel. <br /></p>
-							<p>Hello, </p>
+							<!-- <p>Hello, </p> -->
 							<p>Helping businesses convert raw data into interactable dashboards.</p>
 							<!--<p>Checkout my LinkedIn at using this <a href="http://html5up.net">link!</a><br />
 							and <a href="http://html5up.net/license">here</a> for GitHub.</p>-->
