--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 								<div class="inner">
 									<h2>Python Visualization</h2>
 									<p>Created visuals (scatter plots, mapbox, boxplot) using statistics to better understand the Airbnb rental market and analyze trends to maximize profits as a property owner.</p>
-									<p>Skills used: Python, Pandas, Matplotlib, Seaborn, Plotly</p>
+									<p>Leverged knowledge of Python frameworks including <i>Pandas, Matplotlib, Seaborn, Plotly</i></p>
 									<p><a href="https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data?resource=download"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
-										<li><a href="https://github.com/Jnthn7/Python-Data-Project" class="button">View Project</a></li>
+										<li><a href="https://github.com/Jnthn7/Python-Data-Project/blob/main/Python%20Project%20-%20JAT.ipynb" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/corona.jpg" alt="" data-position="top center" /></a>
+							<a href="https://github.com/Jnthn7/SQL-Tableau-Project" class="image"><img src="images/corona.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>SQL Exploration/Tableau Visualization</h2>
-									<p>Used COVID-19 data to present visuals to show the rapid increase in cases and vaccinations.</p>
-									<p>Skills used: SQL, Tabelau, Joins, CTEs</p>
+									<p>Used relevant COVID-19 data to develop visuals and show the rapid increase in deaths and vaccinations.</p>
+									<p>Utilized skills such as <i>Joins, CTEs, and Partitions</i></p>
 									<p><a href="https://ourworldindata.org/covid-deaths"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/SQL-Tableau-Project/blob/main/Covid_Data_SQLQuery_Project.sql" class="button">SQL Queries</a>&nbsp;&nbsp;&nbsp;<a href="https://public.tableau.com/app/profile/jonathan.arroyo.tena/viz/SQL-TableauCovid/Dashboard" class="button">Tableau Dashboard</a></li>
@@ -97,8 +97,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Excel Dashboard</h2>
-									<p>Using pre-made sample data to create a dashboard using Microsoft Excel. Data from a bike shop was used to generate visuals to target demographics within the community.</p>
-									<p>Skills used: Excel, Cleaning Data, Filters, Pivot Tables</p>
+									<p>Used pre-made sample data to create an interactable dashboard using Microsoft Excel. Data from a bike shop was used to generate visuals to target demographics within the community.</p>
+									<p>Utilized knowledge of skills such as <i>Cleaning Data, implimenting Filters, and Creating Pivot Tables</i></p>
 									<p><a href="https://github.com/AlexTheAnalyst/Excel-Tutorial/blob/main/Excel%20Project%20Dataset.xlsx"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="button">View Project</a></li>
