--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 								<div class="inner">
 									<h2>Python Visualization</h2>
 									<p>Created visuals (scatter plots, mapbox, boxplot) using statistics to better understand the Airbnb rental market and analyze trends to maximize profits as a property owner.</p>
-									<p>Leverged knowledge of Python frameworks including <i>Pandas, Matplotlib, Seaborn, Plotly</i></p>
+									<p>Leverged knowledge of Python frameworks including <i>Pandas, Matplotlib, Seaborn, and Plotly</i></p>
 									<p><a href="https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data?resource=download"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/Python-Data-Project/blob/main/Python%20Project%20-%20JAT.ipynb" class="button">View Project</a></li>
