--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 								<div class="inner">
 									<h2>Excel Dashboard</h2>
 									<p>Used pre-made sample data to create an interactable dashboard using Microsoft Excel. Data from a bike shop was used to generate visuals to target demographics within the community.</p>
-									<p>Utilized knowledge of skills such as <i>Cleaning Data, implimenting Filters, and Creating Pivot Tables</i></p>
+									<p>Utilized knowledge of skills such as <i>Cleaning Data, implimenting Filters, and creating Pivot Tables</i></p>
 									<p><a href="https://github.com/AlexTheAnalyst/Excel-Tutorial/blob/main/Excel%20Project%20Dataset.xlsx"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
 										<li><a href="https://github.com/Jnthn7/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="button">View Project</a></li>
