--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Jonathan Arroyo Tena</h1>
-							<p>Data Science student with experience in SQL, Python, Tableau, PowerBI, and Excel. <br /></p>
+							<p>Computer Science student with experience in SQL, Python, Tableau, PowerBI, and Excel.<br /></p>
 							<!-- <p>Hello, </p> -->
-							<p>Helping businesses convert raw data into interactable dashboards.</p>
+							<p>Helping businesses convert their raw data into meaningful stories.</p>
 							<!--<p>Checkout my LinkedIn at using this <a href="http://html5up.net">link!</a><br />
 							and <a href="http://html5up.net/license">here</a> for GitHub.</p>-->
 							<ul class="actions">
