updated from Jnthn7 to jnthntena name change

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<ul class="icons">
 								<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 								<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-								<li><a href="https://github.com/Jnthn7" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://github.com/jnthntena" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 								<li><a href="https://www.linkedin.com/in/jonathan-arroyo-tena/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
@@ -53,7 +53,7 @@
 				<!-- Projects -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="https://github.com/Jnthn7/Python-Data-Project" class="image"><img src="images/airbnb1.jpg" alt="" data-position="center center" /></a>
+							<a href="https://github.com/jnthntena/Python-Data-Project" class="image"><img src="images/airbnb1.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Python Visualization</h2>
@@ -61,13 +61,13 @@
 									<p>Leverged knowledge of Python frameworks including <i>Pandas, Matplotlib, Seaborn, and Plotly</i></p>
 									<p><a href="https://www.kaggle.com/datasets/dgomonov/new-york-city-airbnb-open-data?resource=download"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
-										<li><a href="https://github.com/Jnthn7/Python-Data-Project/blob/main/Python%20Project%20-%20JAT.ipynb" class="button">View Project</a></li>
+										<li><a href="https://github.com/jnthntena/Python-Data-Project/blob/main/Python%20Project%20-%20JAT.ipynb" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<a href="https://github.com/Jnthn7/SQL-Tableau-Project" class="image"><img src="images/corona.jpg" alt="" data-position="top center" /></a>
+							<a href="https://github.com/jnthntena/SQL-Tableau-Project" class="image"><img src="images/corona.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>SQL Exploration/Tableau Visualization</h2>
@@ -75,7 +75,7 @@
 									<p>Utilized skills such as <i>Joins, CTEs, and Partitions</i></p>
 									<p><a href="https://ourworldindata.org/covid-deaths"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
-										<li><a href="https://github.com/Jnthn7/SQL-Tableau-Project/blob/main/Covid_Data_SQLQuery_Project.sql" class="button">SQL Queries</a>&nbsp;&nbsp;&nbsp;<a href="https://public.tableau.com/app/profile/jonathan.arroyo.tena/viz/SQL-TableauCovid/Dashboard" class="button">Tableau Dashboard</a></li>
+										<li><a href="https://github.com/jnthntena/SQL-Tableau-Project/blob/main/Covid_Data_SQLQuery_Project.sql" class="button">SQL Queries</a>&nbsp;&nbsp;&nbsp;<a href="https://public.tableau.com/app/profile/jonathan.arroyo.tena/viz/SQL-TableauCovid/Dashboard" class="button">Tableau Dashboard</a></li>
 									</ul>
 								</div>
 							</div>
@@ -93,7 +93,7 @@
 							</div>
 						</section> -->
 						<section>
-							<a href="https://github.com/Jnthn7/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="image"><img src="images/bicycle_pic.jpg" data-position="top center" /></a>
+							<a href="https://github.com/jnthntena/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="image"><img src="images/bicycle_pic.jpg" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Excel Dashboard</h2>
@@ -101,7 +101,7 @@
 									<p>Utilized knowledge of skills such as <i>Cleaning Data, implimenting Filters, and creating Pivot Tables</i></p>
 									<p><a href="https://github.com/AlexTheAnalyst/Excel-Tutorial/blob/main/Excel%20Project%20Dataset.xlsx"><h3>Visit the Raw Data</h3></a></p>
 									<ul class="actions">
-										<li><a href="https://github.com/Jnthn7/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="button">View Project</a></li>
+										<li><a href="https://github.com/jnthntena/Excel-Project/blob/main/Excel%20Project%20Dataset.xlsx" class="button">View Project</a></li>
 									</ul>
 								</div>
 							</div>
