--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 											<ul class="icons">
 												<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>-->
 												<!--<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>-->
-												<li><a href="https://github.com/Jnthn7" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://github.com/jnthntena" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 												<!--<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 												<li><a href="https://www.linkedin.com/in/jonathan-arroyo-tena/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
